CLOSED FIXED38597
[Qt] QtTestBrowser does not have a "Load" button ; therefore, unable to load pages on touch only symbian devices (portrait mode).
https://bugs.webkit.org/show_bug.cgi?id=38597
Summary [Qt] QtTestBrowser does not have a "Load" button ; therefore, unable to load ...
Alexandra Santos
Reported 2010-05-05 11:43:49 PDT
Since QtLauncher does not have a "load" button, on touch only symbian devices like N8, it is not possible to load pages. Steps to reproduce: 1.- Install qt.sis (4.6.2), qtwebkit.sis and qtlauncher on the device. 2.- Launch qtlauncher 3.- Enter a url address and try to load the page. Actual Results: It is not possible to load pages; there is no "load" or "enter" button. Expected results: qtlauncher would have a "Load" button to be pressed in order to load a page.
Attachments
patch (2.47 KB, patch)
2010-06-24 08:48 PDT, Jesus Sanchez-Palencia
no flags
Jesus Sanchez-Palencia
Comment 1 2010-05-12 08:15:53 PDT
Good point! Blocking the 2.0 release as this is simple to solve and quite useful to have.
Kenneth Rohde Christiansen
Comment 2 2010-05-12 08:29:57 PDT
Shouldn't enter from the virtual keyboard close the keyboard and start the load? What does the iphone and the ipad do?
Simon Hausmann
Comment 3 2010-05-18 13:44:12 PDT
Hmm, on my N8 I'm using the "Enter" key (the little arrow) on the virtual keyboard to initiate the load. I'm moving this issue from the release blocker to the should-include-if-patch-is-available tracker. It would be nice to fix QtTestBrowser (the new name :-), but it's not critical to the release I'd say.
Jesus Sanchez-Palencia
Comment 4 2010-06-24 08:48:14 PDT
Created attachment 59658 [details] patch Simple patch that makes the reload button act as a load button as well. Solves the problem and we don't need to add another button. :)
WebKit Commit Bot
Comment 5 2010-06-25 17:58:31 PDT
Comment on attachment 59658 [details] patch Clearing flags on attachment: 59658 Committed r61926: <http://trac.webkit.org/changeset/61926>
WebKit Commit Bot
Comment 6 2010-06-25 17:58:35 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 7 2010-06-28 03:16:59 PDT
Revision r61926 cherry-picked into qtwebkit-2.0 with commit 38d650efc92427cd6452f6685d3c40d22428cdb7
Jesus Sanchez-Palencia
Comment 8 2010-06-28 08:51:03 PDT
(In reply to comment #7) > Revision r61926 cherry-picked into qtwebkit-2.0 with commit 38d650efc92427cd6452f6685d3c40d22428cdb7 Nice! But I had to upload a follow-up patch because the behavior was wrong. It wasn't loading a new web page if the url in the line edit had been changed. Simon, could you please cherry-pick this revision as well? http://trac.webkit.org/changeset/62009 Changing back from CLOSED to RESOLVED so we don't forget it...
Simon Hausmann
Comment 9 2010-06-30 07:43:18 PDT
Revision r61926 cherry-picked into qtwebkit-2.0 with commit 38d650efc92427cd6452f6685d3c40d22428cdb7
Simon Hausmann
Comment 10 2010-06-30 07:43:46 PDT
<cherry-pick-for-backport: r62009>
Simon Hausmann
Comment 11 2010-07-01 01:32:24 PDT
Revision r62009 cherry-picked into qtwebkit-2.0 with commit 0eee8df53d1873669a9dda8f9c0340543258a316
Note You need to log in before you can comment on or make changes to this bug.