2010-06-25  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser does not have a "Load" button ; therefore, unable to load pages on touch only symbian devices (portrait mode).
        https://bugs.webkit.org/show_bug.cgi?id=38597

        Make the reload button act as a load button as well.

        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::buildUI):
        (MainWindow::changeLocation):

Canonical link: https://commits.webkit.org/52906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61926 268f45cc-cd09-0410-ab3c-d52691b4dbfc